--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
   border: 10px solid white;
   */
   grid-template-columns: auto 1200px auto; /* ширина*/
-  grid-template-rows: 7em minmax(760px, 1fr) 7em;  /* высота*/
+  grid-template-rows: 7em auto 7em;  /* высота*/
  
 }
 
@@ -72,7 +72,61 @@ background-color: 18bb9c;
     color: white;
     margin-right: 40px;
     margin-top: 40px;
+    line-height: 0.1;
   }
+  
+
+  #reg {
+    font-size: 1.0em;
+    text-align: right;
+    color: white;
+    margin-right: 100px;
+    margin-top: 5px;
+  }
+
+  #survey-form {
+    background-color: 242446;
+    color: white;
+    width: 800px;
+    height: auto;
+    margin: 15px auto 15px auto;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 150%;
+   
+  }
+ 
+  
+  #general1 {
+  margin-left: 35px;
+  margin-top: 10px;
+  line-height: 2.5;
+  }
+  input  {
+  font-size: 120%; 
+  color: black;
+  
+  } 
+
+    .button {
+      background-color:37af65; /* Green */
+      border: none;
+      color: white;
+      text-align: center;
+    
+    
+      font-size: 16px;
+      width: 730px;
+      height: 40px;
+      }
+
+      #title {
+        text-align: center;
+      }
+      #description {
+        text-align: center;
+      }
+
 
 
 
